Output/14teacher_3704936_%Y-%m-%d-%H-%M-%S.txt
save to: /users/acr23hk/paper/fsod-dc/dataset/check/voc/1726356812/base1/model_final-fsod.pth
  File "picture.py", line 89
    
                         ^
SyntaxError: unexpected EOF while parsing
  File "picture.py", line 89
    
                         ^
SyntaxError: unexpected EOF while parsing
  File "picture.py", line 89
    
                         ^
SyntaxError: unexpected EOF while parsing
  File "picture.py", line 89
    
                         ^
SyntaxError: unexpected EOF while parsing
  File "picture.py", line 89
    
                         ^
SyntaxError: unexpected EOF while parsing
Traceback (most recent call last):
  File "/users/acr23hk/.conda/envs/paper1/lib/python3.8/runpy.py", line 194, in _run_module_as_main
    return _run_code(code, main_globals, None,
  File "/users/acr23hk/.conda/envs/paper1/lib/python3.8/runpy.py", line 87, in _run_code
    exec(code, run_globals)
  File "/users/acr23hk/paper/fsod-dc/tools/display_results.py", line 189, in <module>
    main(args)
  File "/users/acr23hk/paper/fsod-dc/tools/display_results.py", line 128, in main
    table = open(os.path.join(root, "results.txt"), "w")
FileNotFoundError: [Errno 2] No such file or directory: 'checkpoints/voc/1726614254/results.txt'
